prevent menu underline from falling behind shadow

--- a/themes/kay2/sass/screen.sass
+++ b/themes/kay2/sass/screen.sass
@@ -134,6 +134,7 @@ iframe
           height: 40px
           left: 0
           position: absolute
+          z-index: 90
           top: 0
           width: 100%
 
